fixed spacing and margins in gallery page

--- a/css/liquid-slider.css
+++ b/css/liquid-slider.css
@@ -49,7 +49,8 @@
 * Additional media queries are at the bottom of this document
 ******************************************************************/
 .ls-wrapper {
-  margin:0 auto;
+ // margin:0 auto;
+  margin-top : 2%;
   /* Do not edit below this line */
   clear: both;
   overflow: auto;
